tests/fixtures/invalid/multi/circular_imports/circ/back.gcl
// Back edge: `circ.back` depends on `circ`, closing the cycle.
import circ.{ x };

param y: Dimensionless = 2.0;
